projects/compiler/test/typechecker/typeidentifier/error_modalias_path_too_long.out
Error at %FILE_NAME%:3:10
Not yet implemented:
  |  val _: e.f.G[] = []
              ^
Reason: qualified type paths longer than 2
