projects/compiler/test/typechecker/typeidentifier/error_modalias_path_too_long.abra
import "./_exports" as e

val _: e.f.G[] = []
